cabal-version:      3.0
name:               go-shortener
version:            1.0.0
license:            MIT
license-file:       LICENSE
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable go-shortener
    import:           warnings
    main-is:          Shortener.hs
    build-depends:    base, text, bytestring, wai, wai-extra, network-uri, warp, hedis, SHA, http-types
    default-language: Haskell2010
